1) Improved UI for Activity main. 2) Improved UI for Activity store. 3) Improved UI for Activity cart.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        android:theme="@style/AppTheme">
         <activity android:name=".loginOrSignup"></activity>
         <!-- Copied and pasted from developers.facebook.com while setting facebook login -->
         <!-- Facebook login begins -->
@@ -35,8 +35,7 @@
         <activity android:name=".signinorup" />
         <activity android:name=".payment" />
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -46,8 +45,9 @@
             android:name=".NoInternet"
             android:label="No internet" />
         <activity android:name=".cart" />
-        <activity android:name=".orderHistory" />
-        <activity android:name=".store" />
+        <activity android:name=".orderHistory"/>
+        <activity android:name=".store"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".addressBook" />
         <activity android:name=".addAddress" />
         <activity android:name=".paymentMethods" />
