--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".loginOrSignup"></activity>
-        <!-- Copied and pasted from developers.facebook.com while setting facebook login -->
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".orderDetail"></activity>
+        <activity android:name=".loginOrSignup" /> <!-- Copied and pasted from developers.facebook.com while setting facebook login -->
         <!-- Facebook login begins -->
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
-
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
@@ -34,10 +33,10 @@
         <activity android:name=".phoneVerification" /> <!-- Facebook login ends -->
         <activity android:name=".signinorup" />
         <activity android:name=".payment" />
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -45,9 +44,10 @@
             android:name=".NoInternet"
             android:label="No internet" />
         <activity android:name=".cart" />
-        <activity android:name=".orderHistory"/>
-        <activity android:name=".store"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".orderHistory" />
+        <activity
+            android:name=".store"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".addressBook" />
         <activity android:name=".addAddress" />
         <activity android:name=".paymentMethods" />
@@ -57,9 +57,11 @@
         <activity android:name=".helpAndSupport" />
         <activity android:name=".wallet" />
         <activity android:name=".aboutUs" />
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_application_id" />
+
         <service
             android:name=".MyFirebaseMessagingService"
             android:exported="false">
@@ -68,10 +70,10 @@
             </intent-filter>
         </service>
     </application>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 </manifest>
